[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/poco/Poco.tres" type="DynamicFont" id=1]
[ext_resource path="res://fonts/xolonium/xolonium-fonts-4.1/ttf/Xolonium-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Levels/mpMenu/mpMenu.gd" type="Script" id=3]
[ext_resource path="res://fonts/cmu-typewriter/Typewriter.tres" type="DynamicFont" id=4]

[sub_resource type="DynamicFont" id=1]
size = 250
font_data = ExtResource( 2 )

[node name="mpMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.0862745, 0.0862745, 0.0862745, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hostButton" type="Button" parent="."]
margin_left = 90.0
margin_top = 490.0
margin_right = 488.0
margin_bottom = 580.0
custom_fonts/font = ExtResource( 1 )
text = "Host Game"
flat = true

[node name="joinButton" type="Button" parent="."]
margin_left = 170.0
margin_top = 620.0
margin_right = 568.0
margin_bottom = 710.0
custom_fonts/font = ExtResource( 1 )
text = "Join Game"
flat = true

[node name="backButton" type="Button" parent="."]
margin_left = 340.0
margin_top = 750.0
margin_right = 540.0
margin_bottom = 840.0
custom_fonts/font = ExtResource( 1 )
text = "Back"
flat = true

[node name="title" type="Label" parent="."]
visible = false
margin_left = 910.0
margin_top = 150.0
margin_right = 1776.0
margin_bottom = 755.0
rect_rotation = 7.7
rect_pivot_offset = Vector2( 420, 500 )
custom_fonts/font = SubResource( 1 )
text = "MEGA
PONG"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="status" type="Label" parent="."]
margin_left = 1250.0
margin_top = 720.0
margin_right = 1900.0
margin_bottom = 1060.0
custom_fonts/font = ExtResource( 4 )
autowrap = true

[node name="ColorRect" type="ColorRect" parent="status"]
show_behind_parent = true
margin_right = 650.0
margin_bottom = 340.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="serverIPLabel" type="Label" parent="."]
visible = false
margin_left = 680.0
margin_top = 410.0
margin_right = 1040.0
margin_bottom = 473.0
custom_fonts/font = ExtResource( 1 )
text = "Server IP:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="serverPortLabel" type="Label" parent="."]
visible = false
margin_left = 1350.0
margin_top = 410.0
margin_right = 1787.0
margin_bottom = 473.0
custom_fonts/font = ExtResource( 1 )
text = "Server Port:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connectButton" type="Button" parent="."]
visible = false
margin_left = 1110.0
margin_top = 570.0
margin_right = 1405.0
margin_bottom = 639.0
custom_fonts/font = ExtResource( 1 )
text = "Connect"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="serverIPInput" type="LineEdit" parent="."]
visible = false
margin_left = 680.0
margin_top = 480.0
margin_right = 1280.0
margin_bottom = 553.0
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="serverPortInput" type="LineEdit" parent="."]
visible = false
margin_left = 1350.0
margin_top = 480.0
margin_right = 1876.0
margin_bottom = 553.0
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hostPortLabel" type="Label" parent="."]
margin_left = 600.0
margin_top = 510.0
margin_right = 771.0
margin_bottom = 573.0
custom_fonts/font = ExtResource( 1 )
text = "Port:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hostPortInput" type="LineEdit" parent="."]
margin_left = 790.0
margin_top = 510.0
margin_right = 1316.0
margin_bottom = 583.0
custom_fonts/font = ExtResource( 1 )

[node name="hostStartButton" type="Button" parent="."]
margin_left = 1360.0
margin_top = 510.0
margin_right = 1560.0
margin_bottom = 579.0
custom_fonts/font = ExtResource( 1 )
text = "Start"
flat = true
[connection signal="pressed" from="hostButton" to="." method="_on_hostButton_pressed"]
[connection signal="pressed" from="joinButton" to="." method="_on_joinButton_pressed"]
[connection signal="pressed" from="backButton" to="." method="_on_backButton_pressed"]
[connection signal="pressed" from="connectButton" to="." method="_on_connectButton_pressed"]
[connection signal="pressed" from="hostStartButton" to="." method="_on_hostStartButton_pressed"]
